# StockChain-Onchain-AI-Stock-Research-Lab

./: .env.example  .gitignore  README.md  pyproject.toml  start.sh  stop.sh
blockchain/: .env.example  .gitignore
data/: .gitkeep
frontend/: .gitignore  package.json
frontend/src/app/: globals.css  page.tsx
frontend/src/app/analysis/: AnalysisView.tsx
frontend/src/app/backtest/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/app/simulation/: page.tsx
frontend/src/components/: ActionCard.tsx  AnalystPanel.tsx  LineAreaChart.tsx  PageHeader.tsx  RiskGauge.tsx  SignalBadge.tsx
frontend/src/lib/: addresses.json  api.ts
frontend/src/lib/i18n/: messages.ts
src/fintastech/: __init__.py
src/fintastech/agents/: advisor.py  sentiment.py
src/fintastech/api/routes/: analysis.py  backtest.py
src/fintastech/backtesting/: engine.py
src/fintastech/data/: mock_provider.py  yahoo_provider.py
src/fintastech/simulation/: portfolio.py
src/fintastech/utils/: __init__.py  cache.py
tests/: test_backtest_engine.py  test_simulation_ledger.py
